--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     </div>
     <div class="contact-box-wrapper">
       <div class="contact-box">
-        <h2>Contact</h2>
+        <h2 class="contact-header">Contact</h2>
 
         <p>
           Inquiries can be directed to: info@intragraph.no, from no others than
