--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       </nav>
 
       <div class="top-image-wrapper">
-        <img src="images/logo.png" alt="Your Logo" class="top-image" />
+        <a href="/">
+          <img src="images/logo.png" alt="Your Logo" class="top-image" />
+        </a>
       </div>
     </div>
 
